style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

body {
    font-family: Roboto;
    display: flex;
    flex-direction: column;
    margin: 0;
    min-height: 100vh
}

.header, .top, .footer {
    background-color: #1f2937;
    color: #f9faf8;
}

.header {
    display: flex;
    align-items: center;
}

.header-logo {
    font-size: 24px;
    margin-left: 200px;
    color: #f9faf8;
}

.main {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    align-items: center;
}

.top {
    display: flex;
    background-color: #1f2937;
    justify-content: space-between;
    flex-shrink: 0;
}

.info {
    display: flex;
    justify-content: center;
    gap: 20px;
}

.info-box {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    max-width: 200px;
    text-align: center;
    padding: 50px;
    font-size: 18px;
    color: #7f8083;
}

.quote-container {
    display: flex;
    flex-direction: column;
    background-color: #e5e7eb;
    padding:  50px 200px;
}

.quote-container .quote {
    font-style: italic;
    font-weight: 100;
    max-width: 1000px;
    font-size: 36px;
}

.quote-container .speaker {
    font-weight: bold;
    text-align: right;
    max-width: 1000px;
}

.info-header {
    text-align: center;
    font-size: 36px;
    font-weight: bolder;
    color: #1f2937
}

ul {
    display: flex;
    text-decoration: none;
    list-style-type: none;
    gap: 15px;
}

.right-links {
    margin-left: auto;
    padding: 20px 0px;
    font-size: 18px;
    color: #e5e7eb;
    margin-right: 200px;
}  

.footer {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 20px;
    flex-shrink: 0;
}

.sign-up {
    display: flex;
}

.top, .info, .quote, .sign-up {
    flex-grow: 1;
}

.hero-text {
    font-size: 48px;
    font-weight: bolder;
    margin-bottom: -30px;
}

.secondary-hero {
    font-size: 17px;
    color: #e5e7eb;
}

.sign-up-btn {
    background-color: #3882f9;
    color: white;
    padding: 5px 10px;
    border: none;
    border-radius: 9%;
    max-width: 80px;
}

.sign-up .sign-up-btn {
    border: 3px solid white;
}

.top-text {
    display: flex;
    flex-direction: column;
    padding-left: 200px;
    max-width: 400px;
    gap: 40px;
}

.image {
    width: 250px;
    height: auto;
    border-radius: 5%;
}

.top-image .image {
    width: 500px;
    height: auto;
    margin-right: 200px;
    padding-bottom: 75px;
    border-radius: 0%;
}

